--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Document</title>
+    <title>They're all just nipple</title>
 </head>
 <body>
 
     <div id="maintext">
-        They're <br> all just <br> nipples
+        They're  all just  nipples
     </div>
 
     <div id="backbutton">
@@ -42,6 +42,10 @@
             <path d="M25 14.5L0.249999 28.7894L0.25 0.21058L25 14.5Z" fill="white"/>
             </svg>
             
+    </div>
+
+    <div id="about">
+        <a href ="about.html">about</a>
     </div>
 
 
